// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardBody /> renders correctly without children 1`] = `
<article
  className="card"
/>
`;

exports[`<CardBody /> renders with children 1`] = `
<article
  className="card"
>
  <p>
    Content
  </p>
</article>
`;
